# Maktiny.github.io

./: Comments.ejs  Comments.html  Comments.js  README.md  _config.yml  index.md
docs/: Chrome-Hoxx-3.11.1.crx  install_script.sh  settings.json  常用指令手册.odt
docs/books/: .gitattributes
docs/books/quant/: turtle_node.md
docs/lab_material/: .~peephole.pptx  QEMU - block chaining.ppt  peephole.pptx  演示文稿1.pptx  符号扩展.pptx
docs/learn_nasm/: a.out  hello.asm  hola.asm
docs/manual/loongsonArc/lab_material/: peephole.pptx  符号扩展.pptx
docs/script/: install_script.sh  settings.json
docs/tips/: LAXT_frame.txt  bianyi.md  binfmt.txt  c++_knowledge.md  debug_trick.md  learn_kernel_module.md  learn_tmux.txt  learn_vim.txt  lifesytle.md  paperList.md  qv2ray_tip.md  spce_manual.md  virtualization_technique.md  x86_kw.md  动态二进制翻译测试.pptx
docs/tips/kvm/: kvm.md  qemu-kvm.md  qemu-net.md  vfio.md  virtio.md  virtuial_interrupt.md
docs/tips/latx/: a.txt  latx_handle_indirect.md  merge_hqemu.md  optimization.md  superblock.patch  use_qemu.md
docs/tips/learn_makefile/: all  makefile
docs/tips/learn_makefile/.ccls-cache/@home@liyi@lixu@tips@learn_makefile/: bar.c.blob
docs/tips/learn_makefile/cmake/: CMakeLists.txt  config.h  config.h.in  main.c
docs/tips/learn_makefile/cmake/src/: CMakeLists.txt  math.c  math.h
docs/tips/learn_makefile/practices/demo1/build_type/: CMakeLists.txt  main.cpp
docs/tips/learn_makefile/practices/demo1/configure_geb/: CMakeLists.txt  main.cpp  path.h  path.h.in  ver.h  ver.h.in
docs/tips/linux_notes/: ### LATX  handle_indirect.md  Ext4.md  HQEMU_structure.md  HQEMU的代码框架.md  LATX  handle_indirect.md  QEMU_exec_flow.md  To Do List.md  access_file.md  bash_learn.md  cdev.md  collect_error.md  function_call.md  hqemu_exec_flow.md  interview_questions.md  kenerl_debug_tool.md  kernel_synchronize.md  kernel_time.md  memory_manage.md  memory_manage0.md  paper_list.md  process_address.md  process_communication.md  process_manage.md  system_mistakes.md  tools.md  vfs.md  x86_kw.md
docs/tips/linux_notes/OS2/: instruction.md
docs/tips/llvm_notes/: Inline_optimization.md
docs/tips/lua/: hello.lua  lua_learn_materials.md  test.lua
docs/tips/sel4/: CAmkES.md  COMP9242.md  turtoial.md
docs/tips/sel4/kernel/: interrupt.md  start-up.md
docs/入门指南/: 实验：了解X86的前缀.md
homepage/Maktiny.github.io/docs/tips/linux_notes/: Ext4.md
